# tap-db2

./: .gitignore  README.md  meltano.yml  pyproject.toml  setup.py  tap-db2.yml
.github/workflows/: db2_image.yml  python-package.yml  test-tap.yml
archive/: pyproject.toml
archive/tap_db2/: __init__.py
archive/tests/: single_table.py
tap_db2/: __init__.py  client.py  connection.py  tap.py
tap_db2/sync_strategies/: common.py  incremental.py  logical.py
tests/: db2_config.json  run_sql.py  test_core.py  utils.py
tests/generate_data/: staff_table_generate.sql
