[tool.poetry]
name = "mjsqu-tap-db2"
version = "0.0.1"
description = "`tap-db2` is a Singer tap for db2, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Mark Johnston"]
keywords = [
    "ELT",
    "db2",
]
license = "Apache 2.0"
packages = [
    { include = "tap_db2" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.27.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
ibm-db-sa = { version="0.4.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.27.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
plugins = "sqlmypy"

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_db2"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_db2"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-db2 = 'tap_db2.tap:Tapdb2.cli'
